<resources>
    <string name="app_name">NTSquiz</string>
    <string name="title_activity_quiz">NTS Quiz</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="all_questions">All questions</string>
    <string name="random_questions">Random questions</string>
    <string name="quiz">Quiz</string>
    <string name="questions_group">Questions</string>
    <string name="uobia">UoBiA</string>
    <string name="kodeks_karny">Kodeks Karny</string>
    <string name="wzorcowy_regulamin_strzelnic">Wzorcowy regulamin strzelnic</string>
    <string name="przewo_enia_broni_i_amunicji">Przewożenia broni i amunicji</string>
    <string name="deponowanie_broni">Deponowanie broni</string>
    <string name="noszenie_i_przechowywanie_broni" translatable="false">Noszenie i przechowywanie broni</string>
    <string name="egzamin">Egzamin</string>
    <string name="legislation_group">Legislation</string>
    <string name="about_us">About us</string>
    <string name="join">Join</string>
    <string name="nts_group" translatable="false">NTS</string>
    <string name="about_us_html" translatable="false"><![CDATA[<header><h2> O nas</h2><p>Kim jesteśmy i co robimy</p></header><p>NTS jest stowarzyszeniem kolekcjonerskim broni palnej i klubem sportowym (licencja LK283-2016) zrzeszonym w Polskim Związku Strzelectwa Sportowego. Jesteśmy ogólnopolską organizacją&nbsp;której zadaniem jest popularyzacja strzelectwa, budowa kultury i ruchu strzeleckiego w Polsce, wprowadzanie europejskich standardów w zakresie posiadania broni palnej. Pracujemy u podstaw: pokazujemy ludziom jak rozpocząć przygodę ze strzelectwem, szkolimy z zasad bezpiecznego posługiwania się bronią. Popularyzujemy standardy bezpieczeństwa, edukujemy w zakresie prawa do posiadania broni palnej.<br><br><strong>Główne zadania NTS:</strong></p><ul><li>edukowanie społeczeństwa i zwiększanie ilości posiadaczy broni palnej w Polsce.</li><li>szkolenie członków NTS z zakresu techniki strzelectwa, bezpieczeństwa i przepisów prawa .</li><li>wspieranie członków NTS w zakresie spraw związanych z posiadaniem broni palnej.</li><li>organizowanie spotkań, szkoleń, aktywności sportowej w zakresie strzelectwa.</li><li>wpływanie na proces stanowienia prawa w zakresie broni palnej, edukacji obronnej w porozumieniu i koordynacji z innymi stowarzyszeniami.</li><li>przygotowanie bazy technicznej strzelectwa czyli wspieranie klubów strzeleckich i wszystkich inicjatyw mających na celu budowę strzelnic.</li><li>konsultowanie i wspieranie członków stowarzyszenia w zakresie kolekcjonerstwa broni i militariów, rekonstrukcji historycznych, strzelectwa praktycznego.</li></ul><br>Dlaczego Towarzystwo Strzeleckie? bo brakuje skutecznie działającego stowarzyszenia które będzie walczyć&nbsp;o prawa strzelców - obywateli, bo udział w stowarzyszeniu jest istotna przesłanką do posiadania broni do celów kolekcjonerskich i do celów sportowych.<br><br>Wreszcie dlatego, że mamy coś ważnego do zrobienia: przygotować odpowiednie strzelnice, zwiększyć poziom wyszkolenia strzeleckiego obywateli a pośrednio zwiększyć potencjał obronny Polski<br><p></p><br><h5>Nadwiślańskie Towarzystwo Strzeleckie<br>Ul. Energetyczna 11/134,<br>05-500 Piaseczno,<br>Polska</h5><br><a href="tel:+48221121710">Phone: +48 221 121 710</a><br><a href="tel:+48601228528">Mobile: +48 601 228 528</a><br><a href="tel:+48222501 128">Fax: +48 222 501 128</a><br><a href="mailto:kontakt@towarzystwostrzeleckie.org">Email: kontakt@towarzystwostrzeleckie.org</a>]]></string>
    <string name="contact">Contact</string>
    <string name="join_url" translatable="false">http://www.towarzystwostrzeleckie.org/zapisz-sie/</string>
    <string name="exit_popup_message">Are you sure you want to leave?</string>
    <string name="exit_popup_negative">No</string>
    <string name="exit_popup_positive">Yes</string>
    <string name="exit_popup_title">Exit</string>
    <string name="file_download_failure_popup_message">File %s could not be downloaded, please check internet connection and try again.</string>
    <string name="file_download_failure_popup_positive">close</string>
    <string name="file_download_failure_popup_title">Unable to load %s</string>
    <string name="contact_email" translatable="false">kontakt@towarzystwostrzeleckie.org</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data Updates</string>

    <string name="pref_title_time_between_updates">Minimal time between updates</string>
    <string-array name="pref_time_between_updates_titles">
        <item>each start</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>week</item>
        <item>month</item>
    </string-array>
    <string-array name="pref_time_between_updates_values" translatable="false">
        <item>0</item>
        <item>43200000</item>
        <item>86400000</item>
        <item>604800000</item>
        <item>2629743831</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="check_for_updates_preference">Check for updates</string>
    <string name="start_with_menu_open_preference">Start with menu open</string>
    <string name="only_wifi_update_preference">Update only through WiFi</string>
    <string name="time_between_updates_preference">Min time between updates</string>
    <string name="update_on_startup_preference">Update data on startup</string>
    <string name="pref_off">off</string>
    <string name="pref_on">on</string>
    <string name="file_no_internet_connection_popup_message">Could not establish internet connection, enable data transfer or connect to the WiFi and try again</string>
    <string name="file_no_internet_connection_popup_title">No internet connection</string>
    <string name="downloading_finished_message">downloading finished</string>
    <string name="loading_finished_message">loading finished</string>
    <string name="connecting_to_firebase_message">connecting to Firebase server</string>
    <string name="connected_to_firebase_message">connection with Firebase server established</string>
    <string name="unable_to_connect_to_firebase_message">unable to establish connection with Firebase server</string>

</resources>
