<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="update_on_startup_pref"
        android:summaryOff="@string/pref_off"
        android:summaryOn="@string/pref_on"
        android:switchTextOff="@string/pref_off"
        android:switchTextOn="@string/pref_on"
        android:title="@string/update_on_startup_preference" />
    <ListPreference
        android:defaultValue="86400000"
        android:dependency="update_on_startup_pref"
        android:entries="@array/pref_time_between_updates_titles"
        android:entryValues="@array/pref_time_between_updates_values"
        android:key="timebe_between_updates_pref"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/time_between_updates_preference" />
    <SwitchPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        android:dependency="update_on_startup_pref"
        android:key="only_wifi_update_pref"
        android:summaryOff="@string/pref_off"
        android:summaryOn="@string/pref_on"
        android:switchTextOff="@string/pref_off"
        android:switchTextOn="@string/pref_on"
        android:title="@string/only_wifi_update_preference" />
</PreferenceScreen>
